--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.28.0
+gunicorn==23.0.0
 inflection==0.5.1
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
+packaging==25.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-decouple==3.8
@@ -19,3 +21,4 @@ sqlparse==0.5.3
 typing_extensions==4.14.1
 tzdata==2025.2
 uritemplate==4.2.0
+whitenoise==6.9.0
